@@ -51,6 +51,10 @@
     <properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.9.25</kotlin.version>
+
+        <additionalJOption>-Xdoclint:none</additionalJOption>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.source.encoding>UTF-8</project.source.encoding>
 	</properties>
 
 	<dependencies>
@@ -96,6 +100,44 @@
             </dependency-->
         </dependencies>
     </dependencyManagement>
+
+    <!-- build -->
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jetbrains.dokka</groupId>
+                <artifactId>dokka-maven-plugin</artifactId>
+                <version>1.9.0</version>
+                <executions>
+                    <execution>
+                        <phase>pre-site</phase>
+                        <goals>
+                            <goal>dokka</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <!-- modules -->
 
